change to getFirst() and getLast() (#1127)
* change to getFirst() and getLast()

* run spotlessApply

* fix code smell

* remove star import

* run spotlessApply

* change extra get()